Wrapped Categories.tsx and Sort.tsx to React.memo Wrapped onClickCategory to useCallback in Home.tsx corrected rendering Search.tsx depending on window.location.href

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -181,6 +181,22 @@ body {
       width: 13%;
 
       &-minus {
+
+        &:disabled {
+          opacity: 0.4;
+          border-color: #7b7b7b;
+
+          &:active {
+            transform: none;
+          }
+
+          &:hover {
+            background-color: transparent;
+          }
+          svg path {
+            fill: #7b7b7b;
+          }
+        }
         svg {
           path:first-of-type {
             display: none;
